--- a/frontend/src/styles/shared/atoms/customInput/customInput.css
+++ b/frontend/src/styles/shared/atoms/customInput/customInput.css
@@ -11,7 +11,7 @@
     border-bottom: 2px solid #9b9b9b;
     outline: 0;
     font-size: 1.3rem;
-    color: black;
+    color: rgb(223, 112, 43);
     padding: 7px 0;
     background: transparent;
     transition: border-color 0.2s;
