--- a/frontend/src/styles/ultimateUser/addProducts.css
+++ b/frontend/src/styles/ultimateUser/addProducts.css
@@ -6,17 +6,18 @@
     padding: 1em;
     border: 3px solid #CCC;
     border-radius: 1em;
-  }
+    background-color: #00000000;
+}
 
-  .formLabel {
+.formLabel {
     /* Tamaño y alineación uniforme */
     display: inline-block;
     width: 90px;
     text-align: center;
-  }
+}
 
-  input,
-  textarea {
+input,
+textarea {
     /* Para asegurarse de que todos los campos de texto tienen la misma configuración de letra
      Por defecto, las áreas de texto tienen un tipo de letra monoespaciada */
     font: 1em sans-serif;
@@ -27,7 +28,7 @@
 
     /* Hacer coincidir los bordes del campo del formulario */
     border: 1px solid #999;
-  }
+}
 
 .details_products {
     letter-spacing: .5vw;
@@ -35,6 +36,7 @@
     text-transform: uppercase;
     text-align: center;
 }
+
 .form_div {
     text-transform: uppercase;
 }
@@ -57,6 +59,7 @@
     font-size: 0.9rem;
     letter-spacing: 1px;
 }
+
 .products_class {
     width: 1200px;
     padding: 25px;
@@ -73,8 +76,9 @@
 }
 
 footer {
+    margin: 2em 0 0 0;
     height: 10vh;
-    background-color: pink;
+    background-color: rgb(173, 110, 120);
     color: white;
     display: flex;
     align-items: center;
