Fixed product search issues where you didn't get the results. Fixed in productsModes.
Fixed search input area where you couldn't enable the input where you click in letter input.

New input's color.

--- a/frontend/src/styles/shared/atoms/customInput/customInput.css
+++ b/frontend/src/styles/shared/atoms/customInput/customInput.css
@@ -11,7 +11,7 @@
     border-bottom: 2px solid #9b9b9b;
     outline: 0;
     font-size: 1.3rem;
-    color: rgb(223, 112, 43);
+    color: #ffffff;
     padding: 7px 0;
     background: transparent;
     transition: border-color 0.2s;
